# tools

./: .gitignore  CMakeLists.txt  build  codecheck
bigfile/: CMakeLists.txt  app-exception.hpp  big-file.cpp  file-generator.cpp  file-generator.hpp  igenerator.hpp  ivalidator.hpp  string-utils.cpp  string-utils.hpp
test/: CMakeLists.txt
test/bigfile/: CMakeLists.txt  app-exception.test.cpp  file-generator.test.cpp  file-validator.test.cpp  string-utils.test.cpp  testmain.cpp
